test/files/pos/t7232f/Test.scala

object Test {
  def main(args: Array[String]): Unit = {
    val c = new C()
    val x = c.d
    x.ok()
  }
}
